# amp

./: .git_saved_fftdiv.inc  .gitignore  .gitmodules  AGENTS.md  AGENT_BUILD_GUIDE.md  _amp_ckernels_cffi.c  _amp_ckernels_cffi.cp310-win_amd64.pyd  _amp_graph_runtime.c  amp.py  fftdiv.broken.inc  pyproject.toml  temp_debug.py  temp_fft_patch.diff  temp_git_diff.patch  temp_prev.cpp  temp_remove_fftdiv.py  temp_run_block.py  test_fft_division_node.err  tmp_test_c_kernel.py
Release/: _amp_ckernels_cffi.cp310-win_amd64.exp  _amp_ckernels_cffi.cp310-win_amd64.lib
amp/: audio_graph.py  nodes.py
configs/: default.json
docs/: DAG to KPN conversion.docx  abi_extension_proposal.md  amp_kernels_map.md  amp_runtime_decomposition_plan.md  cffi_diagnostic_guide.md  contrast_audit_fft_division.md  demo_kpn_native_plan.md  fft_division_node_audit.md  kpn_audit_findings.md  kpn_continuous_timebase_design.md  kpn_contract.md  kpn_development_guidance.md  kpn_runtime_action_plan.md  kpn_tap_contract.md  kpn_upgrade_action_plan.md  nufft_continuity_audit.md  nufft_mode_spec.md  oscillator_design_brief.md  spectral_packing_standard.md  spectral_workstation_plan.md
logs/: last_control_blob.json
scripts/: _import_check.py  _smoke_benchmark.py  agent_benchmark.py  benchmark_and_plot.py  build_c_kernels.py  check_ckernel.py  demo_kpn_kpn_native_correct.py  fft_noise_gradient.py  find_corrupting_node.py  graph_runtime_diagnostic.py  joystick_song_10s.json  repro_producer.py  trace_to_timeline.py  validate_control_blob.py
src/native/: CMakeLists.txt  amp_debug_alloc.c  amp_descriptor_builder.c  amp_kernels.c  amp_kernels_wrapper.cpp  amp_mailbox_cpp.cpp  demo_kpn_native.cpp  fft_backend.cpp  graph_runtime.c  graph_runtime.cpp  kpn_cffi.cpp  kpn_graph_converter.c  kpn_sampler_registry.cpp  kpn_stream_session.cpp  mailbox.h
src/native/include/: amp_debug_alloc.h  amp_descriptor_builder.h  amp_fft_backend.h  amp_mailbox_capi.h  amp_native.h  amp_native_mailbox_chain.hpp  fft_division_delay_math.h  kpn_graph_converter.h  oscillator_design_notes.h
src/native/nodes/: README.md
src/native/nodes/constant/: README.md  constant_node.inc
src/native/nodes/constant/contracts/: default.json
src/native/nodes/constant/presets/: default.json
src/native/nodes/controller/: README.md  controller_node.inc
src/native/nodes/controller/contracts/: default.json
src/native/nodes/controller/presets/: default.json
src/native/nodes/drain/: drain_node.inc
src/native/nodes/envelope/: README.md  envelope_node.inc
src/native/nodes/envelope/contracts/: default.json
src/native/nodes/envelope/presets/: default.json
src/native/nodes/fft_division/: README.md  fft_division_mailbox_helpers.h  fft_division_nodes.inc  fft_division_stage_lock.h  fft_division_types.h  fftdiv_execute_block_body.inc
src/native/nodes/fft_division/contracts/: default.json
src/native/nodes/fft_division/presets/: default.json
src/native/nodes/gain/: README.md  gain_node.inc
src/native/nodes/gain/contracts/: default.json
src/native/nodes/gain/presets/: default.json
src/native/nodes/lfo/: README.md  lfo_node.inc
src/native/nodes/lfo/contracts/: default.json
src/native/nodes/lfo/presets/: default.json
src/native/nodes/mix/: README.md  mix_node.inc
src/native/nodes/mix/contracts/: default.json
src/native/nodes/mix/presets/: default.json
src/native/nodes/oscillator/: README.md  oscillator_node.inc
src/native/nodes/oscillator/contracts/: default.json
src/native/nodes/oscillator/presets/: default.json
src/native/nodes/oscillator_pitch/: README.md  oscillator_pitch_node.inc
src/native/nodes/oscillator_pitch/contracts/: default.json
src/native/nodes/oscillator_pitch/presets/: default.json
src/native/nodes/parametric_driver/: README.md  parametric_driver_node.inc
src/native/nodes/parametric_driver/contracts/: default.json
src/native/nodes/parametric_driver/presets/: default.json
src/native/nodes/pitch/: README.md  pitch_node.inc
src/native/nodes/pitch/contracts/: default.json
src/native/nodes/pitch/presets/: default.json
src/native/nodes/pitch_shift/: README.md  pitch_shift_node.inc
src/native/nodes/pitch_shift/contracts/: default.json
src/native/nodes/pitch_shift/presets/: default.json
src/native/nodes/resampler/: README.md  resampler_node.inc
src/native/nodes/resampler/contracts/: default.json
src/native/nodes/resampler/presets/: default.json
src/native/nodes/safety/: README.md  safety_node.inc
src/native/nodes/safety/contracts/: default.json
src/native/nodes/safety/presets/: default.json
src/native/nodes/sampler/: sampler_node.inc
src/native/nodes/sine_osc/: README.md  sine_osc_node.inc
src/native/nodes/sine_osc/contracts/: default.json
src/native/nodes/sine_osc/presets/: default.json
src/native/nodes/subharmonic/: README.md  subharmonic_node.inc
src/native/nodes/subharmonic/contracts/: default.json
src/native/nodes/subharmonic/presets/: default.json
src/native/tests/: fft_backend_compare.cpp  fft_division_node_test_guidance.md  fft_division_test_helpers.h  kpn_run_fft_division.cpp  kpn_unit_test.cpp  mock_fftfree.cpp  mock_fftfree.hpp  test_amp_run_node_v2.cpp  test_fft_backend_stream.cpp  test_fft_backend_transform.cpp  test_fft_division_kpn.cpp  test_fft_division_node.cpp  test_fft_division_shared.cpp  test_fft_noise_gradient.cpp  test_fft_windowing_roundtrip.cpp  test_pitch_shift_node.cpp  test_thermo_param.cpp
src/native/tests/fftfree/: fft_cffi.hpp
tests/: test_agent_benchmark_viz.py  test_app_graph.py  test_app_render_cache.py  test_blep_parity.py  test_c_kernel_diagnostics.py  test_c_kernel_equivalence.py  test_cli.py  test_config.py  test_control_delay.py  test_envelope_kernel.py  test_envelope_parity.py  test_fft_spectral_node.py  test_graph.py  test_graph_edge_runner.py  test_graph_timings.py  test_inversion_sum_error.py  test_joystick.py  test_kpn_edge_diagnostics.py  test_lfo_slew_parity.py  test_native_logging.py  test_native_runtime.py  test_node_benchmarks.py  test_nodes.py  test_osc_parity.py  test_oscillator_modes.py  test_package_structure.py  (+5 more)
(+59 files in other folders)
