[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "amp"
version = "0.1.0"
description = "Configurable audio graph synthesiser"
authors = [{name = "Amp Contributors"}]
requires-python = ">=3.10"
dependencies = [
    "numpy",
]

[project.scripts]
amp = "amp.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests"]
